[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/ui/icons/icon_orb.png" type="Texture" id=1]
[ext_resource path="res://objects/UI/equipment_menu/EquipmentIcon.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/icons/icon_star.png" type="Texture" id=4]

[node name="EquipmentIcon" type="Control"]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]

[node name="IconOrb" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -21.0
margin_top = -22.0
margin_right = 22.0
margin_bottom = 22.0
expand = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -30 )

[node name="IconStar" type="Sprite" parent="Position2D"]
position = Vector2( -18, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IconStar2" type="Sprite" parent="Position2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IconStar3" type="Sprite" parent="Position2D"]
position = Vector2( 18, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
